Added a new service in project management
